statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mstream
  labels:
    app: mstream
spec:
  serviceName: "mstream"
  replicas: 2
  selector:
    matchLabels:
      app: mstream
  template:
    metadata:
      labels:
        app: mstream
    spec:
      containers:
      - name: mstream
        image: linuxserver/mstream:5.12.2
        ports:
        - containerPort: 3000
        volumeMounts:
          - name: music-storage
            mountPath: /music
  volumeClaimTemplates:
  - metadata:
      name: music-storage
      labels:
        app: mstream
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 10Gi
  - metadata:
      name: config-storage
      labels:
        app: mstream
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
