service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mstream-service
  labels:
    app: mstream
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: mstream
